[gd_scene load_steps=4 format=3 uid="uid://b7c1lcteavuex"]

[ext_resource type="Script" path="res://pause_screen.gd" id="1_8bq8c"]
[ext_resource type="Theme" uid="uid://dfcxy7bgfkdlq" path="res://UI_theme.tres" id="1_eqsnw"]
[ext_resource type="Material" uid="uid://bp5bw6sa3t6mx" path="res://blur_shader.tres" id="3_rhqgy"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eqsnw")
script = ExtResource("1_8bq8c")

[node name="blur" type="ColorRect" parent="."]
material = ExtResource("3_rhqgy")
layout_mode = 0
offset_right = 384.0
offset_bottom = 256.0

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 384.0
offset_bottom = 256.0

[node name="PauseMenuOptions" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="CenterContainer/PauseMenuOptions"]
layout_mode = 2
text = "Resume"

[node name="quit to menu" type="Button" parent="CenterContainer/PauseMenuOptions"]
layout_mode = 2
text = "Quit to Menu"

[connection signal="mouse_entered" from="CenterContainer/PauseMenuOptions/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="CenterContainer/PauseMenuOptions/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="CenterContainer/PauseMenuOptions/quit to menu" to="." method="_on_quit_to_menu_mouse_entered"]
[connection signal="pressed" from="CenterContainer/PauseMenuOptions/quit to menu" to="." method="_on_quit_to_menu_pressed"]
